--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "⏳a simple changelog grabber for nodejs packages",
     "main": "index.js",
     "scripts": {
-        "dev": "node -r ts-node/register --watch ./src/index.ts",
+        "dev": "node -r ts-node/register -r tsconfig-paths/register --watch ./src/index.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "ts-patch install"
     },
@@ -12,6 +12,7 @@
     "author": "Sophia <me@sophia-dev.io>",
     "license": "MIT",
     "devDependencies": {
+        "@types/node-fetch": "2.6.7",
         "@typescript-eslint/eslint-plugin": "^6.8.0",
         "@typescript-eslint/parser": "^6.8.0",
         "eslint": "^8.51.0",
@@ -23,6 +24,9 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@octokit/rest": "^20.0.2",
+        "node-fetch": "^2.6.7",
+        "tsconfig-paths": "^4.2.0",
         "typia": "^5.2.2"
     }
 }
